Fix focus indicator clipping and consistency for sidebar and top nav elements (#1769)
Inspired by (but does not close) #1767.

I think the core issue is that many of these flex styles don't leave "space" for a `1px` outline focus indicator, which seems to be the browser standard in Chrome/Firefox/Safari. Adding the negative offset seems to fix this for both viewport "styles".

There is still a minor consistency issue with buttons. I've elected to not touch this for now - need to think about it a bit more as there are some color implications (imo, the default UA focus indicator is too challenging to see against purple/blue backgrounds, and the current shadow is *not bad*)

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -133,6 +133,7 @@
   padding-top: $sp-3;
   padding-bottom: $sp-3;
   color: $body-heading-color;
+  outline-offset: -1px; // Fixes outline clipping on both desktop/mobile "views"
 
   @include container;
 
@@ -160,6 +161,7 @@
   height: 100%;
   padding: $gutter-spacing-sm;
   align-items: center;
+  outline-offset: -1px; // Fixes outline clipping on both desktop/mobile "views"
 }
 
 @include mq(md) {
