--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -23,6 +23,8 @@
       padding-top: $sp-1;
       padding-bottom: $sp-1;
       line-height: #{$nav-list-item-height-sm - 2 * $sp-1};
+      outline-offset: -1px; // Fixes outline clipping on both desktop/mobile "views"
+
       @if $nav-list-expander-right {
         padding-right: $nav-list-item-height-sm;
         padding-left: $gutter-spacing-sm;
@@ -76,6 +78,7 @@
       height: $nav-list-item-height-sm;
       padding: #{$nav-list-item-height-sm * 0.25};
       color: $link-color;
+      outline-offset: -1px; // Fixes outline clipping on both desktop/mobile "views"
 
       @include mq(md) {
         width: $nav-list-item-height;
